# clutgen

./: README.md  pyproject.toml
examples/: temperature_copy.toml  temperature_copy.yml
examples/calibration/: input_voltage.toml  input_voltage.yaml  output_power.toml  output_power.yaml  temperature.toml  temperature.yml
examples/calibration/data/: input_voltage.csv  output_power.csv  output_power.xlsx  temperature.csv
src/: cli.py  codegen.py  config.py  generator.py  plot.py  sensor.py
tests/: conftest.py  test_codegen.py  test_config.py  test_generator.py  test_plot.py  test_sensor.py
